# minibooks

./: .env.sample  .gitignore  Cargo.toml
client/: accounts.rest
migrations/: 20240318195738_initial-schema.sql
src/: db.rs  error.rs  ledger.rs  main.rs  services.rs  settings.rs
src/templates/: balance_sheet.html
